--- a/XamarinDiplomado/XamarinDiplomado/XamarinDiplomado.csproj
+++ b/XamarinDiplomado/XamarinDiplomado/XamarinDiplomado.csproj
@@ -45,6 +45,9 @@
     <Compile Include="Models\Language.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\LanguagesVM.cs" />
+    <Compile Include="Views\LanguageDetailPage.xaml.cs">
+      <DependentUpon>LanguageDetailPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\LanguagesListPage.xaml.cs">
       <DependentUpon>LanguagesListPage.xaml</DependentUpon>
     </Compile>
@@ -63,7 +66,12 @@
     <None Include="GettingStarted.Xamarin" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Views\LanguageDetailPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.WindowsAzure.Mobile, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Microsoft.Azure.Mobile.Client.3.0.3\lib\portable-win+net45+wp8+wpa81+monotouch+monoandroid\Microsoft.WindowsAzure.Mobile.dll</HintPath>
